--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -9851,6 +9851,8 @@ a.button {
   background:#50E2E3; 
   padding:0;
 }
+
+#home-section{}
 /*.leftBar{
   background-color: #008485; 
   height: 635px;
