--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -9897,7 +9897,8 @@ a.button {
 #btn-styling-buddy .toggle p{
   float:left;
   color:white;
-  font-size: 70%;
+  padding:1px;
+  font-size: 55%;
   padding-left:3px;
 }
 
@@ -9910,3 +9911,21 @@ a.button {
 #full-body{
   background: #50E2E3;
 }
+
+.boardline{
+  height:2px;
+  width: 43px;
+  margin-top:-11px;
+  background-color:#979797;
+  margin-left:28px;
+  -ms-transform: rotate(44deg); /* IE 9 */
+  -webkit-transform: rotate(44deg); /* Safari */
+  transform: rotate(44deg);
+}
+
+.toggle-small .handle {
+  top: 5px;
+  left: 4px;
+  width: 20px;
+  height: 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25); }
