--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -15,6 +15,38 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
+#color-modal-style{
+  width:80%; 
+  margin-left:-10%; 
+  height:80%; 
+  margin-top:-5%;
+  opacity:.9;
+  padding-left: -25px;
+}
+
+#color-modal-style h1{
+  font-weight:bold;
+  text-align: center;
+}
+.modal-container{
+  margin:70px;
+}
+
+.color-choice{
+  background-color: #ffffff;
+  padding:.5%;
+  border: 2px solid #979797;
+  border-radius: 12px;
+  height:100px;
+  width:100px;
+  font-size: .75em;
+  /*margin:8px;*/
+  margin-left: 60px;
+  margin-bottom: 30px;
+  float: left;
+  text-align: center;
+}
+
 .real-content {
   width: 40%;
   float: right;
