--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -77,7 +77,7 @@ $dark:                            #444 !default;
 }
 
 .color-choice.selectedColor{
-  background-color: #000;
+  background-color: blue;
 }
 
 .real-content {
@@ -165,10 +165,12 @@ $dark:                            #444 !default;
 #btn-styling-buddy p {
   float: left;
   color: #50E2E3;
-  font-size: 95%; }
+  font-size: 95%; 
+}
 
 #bodyBack {
-  background: #008485; }
+  background: #008485; 
+}
 
 #regularRow {
   margin: 0;
