fixed yellow template color issues and decided on different game plan for board icons

--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -143,11 +143,16 @@ $dark:                            #444 !default;
   width: 0;
   height: 0;
   border-top: 30px solid #50E2E3;
+  /*border-color: #000000;*/
   border-left: 30px solid transparent;
   float: right;
   margin: -4px;
   padding: 0;
   z-index: 3; }
+
+ /* #triangle-color {
+    border-color: #000000;
+  }*/
 
 #btn-styling {
   border-color: #50E2E3;
