finally got router to work

--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -1,7 +1,7 @@
 <ion-header-bar class="bar-dark">
       <div class="buttonsdiv">
         <button class="button button-outline button-calm button-small" id="btn-styling">
-          <a href=""><i class="icon ion-gear-b"></i> Settings</a>
+          <a href="/settings"><i class="icon ion-gear-b"></i> Settings</a>
         </button>
         <button class="button button-outline button-calm button-small" id="btn-styling">
           <i class="icon ion-eye-disabled"></i> Show/Hide Tiles
@@ -155,8 +155,8 @@
           <img src="img/symbols/a_lot.png"><br>
         </span>
       </ion-content>
-    </ion-pane> -->
-
+    </ion-pane>
+ -->
     <script id="contact-modal.html" type="text/ng-template">
       <div class="modal" id="color-modal-style">
         <ion-content>
