--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -2,19 +2,21 @@
    <h1 class="title">Settings</h1>
 </ion-header-bar>
 
+
 <ion-view view-title="AAC" class="pane">
+<!-- <ion-header-bar class="bar bar-subheader"><h2 class="title">General</h2></ion-header-bar> -->
     <ion-content class= "appBody" id="bodyBack">
 		<ion-list>
-			<ion-item>General</ion-item>
+			<ion-item id="blue-list-item">General</ion-item>
 			<ion-item>Compaction</ion-item>
 			<ion-item>Chatting</ion-item>
 			<ion-item>Settings Access</ion-item>
-			<ion-item>Interface</ion-item>
+			<ion-item id="blue-list-item">Interface</ion-item>
 			<ion-item>Synthetic Voice</ion-item>
 			<ion-item>Sound Effects</ion-item>
 			<ion-item>Symbol Labels</ion-item>
 			<ion-item>Phrase Bar</ion-item>
-			<ion-item>Layout</ion-item>
+			<ion-item id="blue-list-item">Layout</ion-item>
 			<ion-item>Quickbar</ion-item>
 			<ion-item>Alternate Home Page</ion-item>
 		</ion-list>
