--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -16,6 +16,25 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+.avatar-box{
+width:10%;
+height:250px;
+background-color: white;
+float:left;
+}
+
+.list-container{
+  float:right;
+  width:90%;
+}
+
+.button a{
+  position:relative;
+  z-index:3;
+  text-decoration: none;
+  color:white;
+}
+
 .item.item-divider{
   background-color: #98E3E3;
 }
