--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -1,7 +1,7 @@
     <ion-header-bar class="bar-dark">
       <div class="buttonsdiv">
         <button class="button button-outline button-calm button-small" id="btn-styling">
-          <i class="icon ion-gear-b"></i> Settings
+          <i class="icon ion-gear-b"></i> <a href="#/settings">Settings</a>
         </button>
         <button class="button button-outline button-calm button-small" id="btn-styling">
           <i class="icon ion-eye-disabled"></i> Show/Hide Tiles
