got settings button to highlight when clicked

--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -37,7 +37,7 @@
 						<span class="item-note">Enable/disable live chat buddy.</span>
 					</ion-item>
 
-					<ion-item>
+					<ion-item ng-click="active()" id="settings">
 						<div class="avatar-icon-placeholder"></div>Settings Access
 					</ion-item>
 				</ion-list>
