added header bar

--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -9,6 +9,7 @@
         <button class="button button-outline button-calm button-small item item-toggle" id="btn-styling">
           <i class="icon ion-ios-chatbubble"></i> Board Factory
         </button>
+        <button class="button"><a href="#/home">Done</a></button>
       </div>
     </ion-header-bar>
 
