--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -2,6 +2,21 @@
 	<h1 class="title"><strong>Settings</strong></h1>
 </ion-header-bar> -->
 
+<ion-header-bar class="bar-dark">
+      <div class="buttonsdiv">
+        <button class="button button-outline button-calm button-small" id="btn-styling">
+          <i class="icon ion-gear-b"></i> <a href="#/settings">Settings</a>
+        </button>
+        <button class="button button-outline button-calm button-small" id="btn-styling">
+          <i class="icon ion-eye-disabled"></i> Show/Hide Tiles
+        </button>
+        <button class="button button-outline button-calm button-small item item-toggle" id="btn-styling">
+          <i class="icon ion-ios-chatbubble"></i> Board Factory
+        </button>
+        <button class="button"><a href="#/home">Done</a></button>
+      </div>
+    </ion-header-bar>
+
 <ion-view view-title="AAC" class="pane">
 	<ion-content class= "appBody" id="bodyBack">
 	    <div class="row">
