--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -52,30 +52,36 @@
 						<span class="item-note">Enable/disable live chat buddy.</span>
 					</ion-item>
 
-					<ion-item ng-click="active()" id="settings">
+					<ion-item ng-click="settingsPanel()" id="settings">
 						<div class="avatar-icon-placeholder"></div>Settings Access
+						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 				</ion-list>
 
 				<ion-list>
 					<div class="item item-divider"><strong>Interface</strong></div>
 
-					<ion-item>
+					<ion-item ng-click="syntheticPanel()">
 						<div class="avatar-icon-placeholder"></div>Synthetic Voice
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 
-					<ion-item>
+					<ion-item ng-click="soundPanel()">
 						<div class="avatar-icon-placeholder"></div>Sound Effects
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 
-					<ion-item>
+					<ion-item item-toggle>
 						<div class="avatar-icon-placeholder"></div>Symbol Labels
-						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
+						<label class="toggle toggle-balanced">
+						<input type="checkbox">
+							<div class="track">
+								<div class="handle"></div>
+							</div>
+						</label>
 					</ion-item>
 
-					<ion-item>
+					<ion-item ng-click="phrasePanel()">
 						<div class="avatar-icon-placeholder"></div>Phrase Bar
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
@@ -83,17 +89,26 @@
 
 				<ion-list>
 					<div class="item item-divider"><strong>Layout</strong></div>
-					<ion-item>
+
+					<ion-item item-toggle>
 						<div class="avatar-icon-placeholder"></div>Quickbar
+						<label class="toggle toggle-balanced">
+						<input type="checkbox">
+							<div class="track">
+								<div class="handle"></div>
+							</div>
+						</label>
 					</ion-item>
 
-					<ion-item>
+					<ion-item ng-click="alternatePanel()">
 						<div class="avatar-icon-placeholder"></div>Alternate Home Page
+						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 				</ion-list>
 			</div>
 
-			<div class="col col-67" id="settings-modal">
+<!-- Settings Access Panel -->
+			<div class="col col-67" id="settings-modal" ng-hide="step != 1">
 				<!-- <div class="bar bar-subheader">
 					<h1 class="title"><strong>Settings</strong></h1>
 				</div> -->
@@ -120,6 +135,43 @@
 					<span class="warning-text">INSERT DEVELOPER MAGIC HERE</span>
 				</div>
 			</div>
+
+<!-- Synthetic Voice Panel -->
+			<div class="col col-67" id="settings-modal" ng-show="step == 2">
+				<ion-list> 
+					<ion-item style="margin-left:5px;margin-top:-6px;">
+						<strong>Synthetic Voice</strong>
+					</ion-item>
+				</ion-list>
+			</div>
+
+<!-- Sound Effects Panel -->
+			<div class="col col-67" id="settings-modal" ng-show="step == 3">
+				<ion-list> 
+					<ion-item style="margin-left:5px;margin-top:-6px;">
+						<strong>Sound Effects</strong>
+					</ion-item>
+				</ion-list>
+			</div>
+
+<!-- Phrase Bar Panel -->
+			<div class="col col-67" id="settings-modal" ng-show="step == 4">
+				<ion-list> 
+					<ion-item style="margin-left:5px;margin-top:-6px;">
+						<strong>Phrase Bar</strong>
+					</ion-item>
+				</ion-list>
+			</div>
+
+<!-- Alternate Home Page -->
+			<div class="col col-67" id="settings-modal" ng-show="step == 5">
+				<ion-list> 
+					<ion-item style="margin-left:5px;margin-top:-6px;">
+						<strong>Alternate Home Page</strong>
+					</ion-item>
+				</ion-list>
+			</div>
+
 		</div>
 	</ion-content>
 </ion-view>
