added checkboxs to one panel, still need to style it

--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -16,6 +16,9 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+.settings-box.ion-checkbox{
+  border-color: black;
+}
 .centered-note{
   margin-left:18%;
   font-style: italic;
