--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -143,6 +143,13 @@
 						<strong>Synthetic Voice</strong>
 					</ion-item>
 				</ion-list>
+
+				<div class="settings-box">
+					<p>Synthetic Voices</p>	
+					<ion-checkbox>Jane</ion-checkbox>
+					<ion-checkbox>Malik</ion-checkbox>
+					<ion-checkbox>Name</ion-checkbox>
+				</div>
 			</div>
 
 <!-- Sound Effects Panel -->
