--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -126,7 +126,7 @@
 							</div>
 						</label>
 						
-						PIN-Protection
+						<p>PIN-Protection</p>
 				</div>
 				<p class="centered-note">Prevent users from changing settings.</p>
 
@@ -146,9 +146,18 @@
 
 				<div class="settings-box">
 					<p>Synthetic Voices</p>	
-					<ion-checkbox>Jane</ion-checkbox>
-					<ion-checkbox>Malik</ion-checkbox>
-					<ion-checkbox>Name</ion-checkbox>
+					<ion-checkbox><span class="checkbox-text">Jane</span><i class="icon ion-play"></i></ion-checkbox>
+					<ion-checkbox><span class="checkbox-text">Malik</span><i class="icon ion-play"></i></ion-checkbox>
+					<ion-checkbox><span class="checkbox-text">Name</span><i class="icon ion-play"></i></ion-checkbox>
+				</div>
+
+				<div class="settings-box">
+					<div class="item range">
+						<div class="avatar-icon-placeholder"></div>
+							<input type="range" name="voice">
+						<div class="avatar-icon-placeholder"></div>
+					</div>
+					<p>Voice Speed</p>
 				</div>
 			</div>
 
@@ -159,6 +168,23 @@
 						<strong>Sound Effects</strong>
 					</ion-item>
 				</ion-list>
+
+				<div class="settings-box">
+					<label class="toggle toggle-balanced">
+						<input type="checkbox">
+							<div class="track">
+								<div class="handle"></div>
+							</div>
+					</label>
+					<p>Sound Effects</p>
+				</div>
+
+				<div class="settings-box">
+					<ion-checkbox><span class="checkbox-text">School Bell</span></ion-checkbox>
+					<ion-checkbox><span class="checkbox-text">Glissandro</span></ion-checkbox>
+					<ion-checkbox><span class="checkbox-text">Label</span></ion-checkbox>
+					<ion-checkbox><span class="checkbox-text">Label</span></ion-checkbox>
+				</div>
 			</div>
 
 <!-- Phrase Bar Panel -->
@@ -168,6 +194,26 @@
 						<strong>Phrase Bar</strong>
 					</ion-item>
 				</ion-list>
+
+				<div class="settings-box">
+						<label class="toggle toggle-balanced">
+						<input type="checkbox">
+							<div class="track">
+								<div class="handle"></div>
+							</div>
+						</label>
+						<p>Speak Each Symbol When Added</p>
+				</div>
+
+				<div class="settings-box">
+						<label class="toggle toggle-balanced">
+						<input type="checkbox">
+							<div class="track">
+								<div class="handle"></div>
+							</div>
+						</label>
+						<p>Clear Phrase Bar After Speaking</p>
+				</div>
 			</div>
 
 <!-- Alternate Home Page -->
@@ -177,6 +223,30 @@
 						<strong>Alternate Home Page</strong>
 					</ion-item>
 				</ion-list>
+
+				<div class="settings-box">
+						<label class="toggle toggle-balanced">
+						<input type="checkbox">
+							<div class="track">
+								<div class="handle"></div>
+							</div>
+						</label>
+						<p>Default Grid</p>
+
+						<br>
+
+						<label class="toggle toggle-balanced">
+						<input type="checkbox">
+							<div class="track">
+								<div class="handle"></div>
+							</div>
+						</label>
+						<p>Emergent Communicator Grid</p>
+
+						<br>
+
+						<p class="greyed-out">PIN-Protection</p>
+				</div>
 			</div>
 
 		</div>
